--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -1,1 +1,50 @@
-<p>about-us works!</p>
+<div class="mb-5">
+    <div class="banner w-100">
+        <div class="banner-mask"></div>
+    </div>
+</div>
+<div class="container-fluid mt-5">
+    <div class="row">
+        <div class="col-lg-3 d-flex align-item-center justify-content-center">
+            <img src="../../../assets/img/aboutUSImg/bodyImgSvg.svg" class="numberH">
+        </div>
+        <div class="col-lg-8">
+            <h1 class="titles mb-5">ABOUT NIU</h1>
+            <p class="textColor">
+                NIU (NIU Technologies) (NASDAQ: NIU), founded in 2014, is the world’s leading provider of smart urban
+                mobility solutions. NIU is committed to continuously provide global customers more convenient and more
+                environmentally friendly smart urban mobility vehicles to redefine urban mobility and make life better.
+                NIU is a global brand in urban mobility that embraces technology, style and freedom. NIU currently
+                designs manufactures and sells high performance smart electric scooters. NIU currently has a streamlined
+                product portfolio consisting of seven series, NQi, MQi, UQi, NIU Aero, Gova, RQi, TQi, with multiple
+                models and specifications for end consumers such as NIU Power accessories and NIU AERO outdoor sports
+                bicycles. The MQi model and UQi model are the only urban mobility products that have won all seven major
+                international design awards in the past 20 years, including Red Dot and IF in Germany, IDEA in United
+                States, and G Mark in Japan.
+            </p>
+            <p class="textColor">
+                As the world’s leading lithium powered electric two wheeler company, NIU created a new market category
+                for smart electric two wheeler vehicles. NIU’s developed a 4th generation NIU Energy™ lithium battery
+                technology that has a longer lasting battery life, longer range, and more lightweight that is safer and
+                more powerful.
+            </p>
+            <p class="textColor">
+                NIU has maintained a fast pace of growth and has sold an accumulation of over 1 million smart electric
+                two wheeler vehicles worldwide. NIU has expanded into 38 countries with retail stores across cities in
+                Asia, Europe and Latin America. NIU also continues to expand support for sharing businesses globally
+                with 20 sharing operators in 13 countries providing SaaS solutions for electric two wheelers.
+            </p>
+            <h1 class="titles my-5">MISSION</h1>
+            <p class="textColor mb-5">
+                Our mission is to redefine urban mobility and make life better.
+            </p>
+            <h1 class="titles">VISION</h1>
+            <p class="textColor my-5">
+                Our vision is to become the number one brand for urban mobility that is powered by design and technology.
+            </p>
+        </div>
+    </div>
+</div>
+<div class="container-fluid px-0">
+    <img src="assets/img/aboutUSImg/bannerImgTwo.png" alt="" class="w-100">
+</div>
