--- a/src/app/components/app-page/app-page.component.html
+++ b/src/app/components/app-page/app-page.component.html
@@ -1,1 +1,124 @@
-<p>app-page works!</p>
+<div id="carouselHomeIndicators" class="carousel slide carousel-fade" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselHomeIndicators" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselHomeIndicators" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselHomeIndicators" data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="assets/img/appPageImg/appCarouselimg/appImgTwo.png" class="d-block w-100">
+        </div>
+        <div class="carousel-item">
+            <img src="assets/img/appPageImg/appCarouselimg/appImgThree.jpg" class="d-block w-100">
+        </div>
+        <div class="carousel-item">
+            <img src="assets/img/appPageImg/appCarouselimg/appImgFour.jpg" class="d-block w-100">
+        </div>
+    </div>
+</div>
+<div class="container-fluid">
+    <h1 class="text-center fontColorRed">NIU App</h1>
+</div>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-lg-6">
+            <figure class="hover-rotate">
+                <img src="assets/img/appPageImg/appRotateOne.jpg" />
+            </figure>
+        </div>
+        <div class="col-lg-6">
+            <h1 class="fontColorRed text-center">
+                <i class="fas fa-satellite-dish"></i>
+            </h1>
+            <p class="mt-5 textColorGray">
+                The NQi-Series has an on-board computer that constantly communicates with the cloud so you can receive
+                real-time data on your mobile phone like:
+            </p>
+            <ul class="mt-4 list-group">
+                <li class="list-group-item textColorGray">Anti-theft alerts.</li>
+                <li class="list-group-item textColorGray">Daily riding habits.</li>
+                <li class="list-group-item textColorGray">Diagnostics.</li>
+                <li class="list-group-item textColorGray">Power supply.</li>
+                <li class="list-group-item textColorGray">Navigation to the nearest service station.</li>
+            </ul>
+            <h3 class="textColorGray my-5 text-center">Peace of Mind</h3>
+        </div>
+    </div>
+</div>
+<div class="container my-5">
+    <div class="row">
+        <div class="col-lg-6">
+            <h1 class="text-center pt-3">
+                <i class="fas fa-wifi fontColorRed"></i>
+            </h1>
+            <h1 class="text-center my-5">NQi-Series + NIU Cloud + APP</h1>
+            <h4 class="textColorGray text-center">A Connected Scooter</h4>
+        </div>
+        <div class="col-lg-6 d-flex justify-content-center">
+            <figure class="hover-rotate">
+                <img src="assets/img/appPageImg/appRotateTwo.webp" />
+            </figure>
+        </div>
+    </div>
+</div>
+<div class="container my-5">
+    <div class="row">
+        <div class="col-lg-6 d-flex justify-content-center align-item-center">
+            <figure class="hover-rotate">
+                <img src="assets/img/appPageImg/appRotateThree.jpg" />
+            </figure>
+        </div>
+        <div class="col-lg-6">
+            <h1>A Smart NIU</h1>
+            <h3 class="textColorGray my-5">Connected and Smart</h3>
+            <p class="textColorGray">Real-time GPS / Anti-theft Alert + Alarm / Real-time diagnostics / Service Station
+                Directory</p>
+            <p class="textColorGray mb-5">In a world of connected devices, we asked why are scooters disconnected from
+                the
+                cloud? We set out to change this.</p>
+        </div>
+    </div>
+</div>
+<div class="container my-5">
+    <div class="row">
+        <div class="col-lg-6">
+            <h1 class="text-center fw-bold my-5">Notification Center</h1>
+            <div class="mt-5 d-flex">
+                <ul class="list-group list-group-horizontal mt-5">
+                    <li class="liBorder list-group-item">
+                        <h3 class="d-flex justify-content-center borderImg">
+                            <img src="assets/img/appPageImg/notificationImg/oneNotification.png" class="liWidth">
+                        </h3>
+                        <p class="liText text-center">Alarm Update</p>
+                    </li>
+                    <li class="liBorder list-group-item">
+                        <h3 class="d-flex justify-content-center borderImg">
+                            <img src="assets/img/appPageImg/notificationImg/twoNotification.png" class="liWidth">
+                        </h3>
+                        <p class="liText text-center">Location Update</p>
+                    </li>
+                    <li class="liBorder list-group-item">
+                        <h3 class="d-flex justify-content-center borderImg">
+                            <img src="assets/img/appPageImg/notificationImg/threeNotification.png" class="liWidth">
+                        </h3>
+                        <p class="liText text-center">Status Update</p>
+                    </li>
+                    <li class="liBorder list-group-item">
+                        <h3 class="d-flex justify-content-center borderImg">
+                            <img src="assets/img/appPageImg/notificationImg/fourNotification.png" class="liWidth">
+                        </h3>
+                        <p class="liText text-center">Service Update</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-lg-6 d-flex justify-content-center align-item-center">
+            <figure class="hover-rotate">
+                <img src="assets/img/appPageImg/appRotateFour.jpg" />
+            </figure>
+        </div>
+    </div>
+</div>
