--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,16 +5,59 @@
     <div class="container bgFooter footerTwo">
         <div class="row">
             <div class="col d-flex flex-column">
-                <a routerLink="/" class="svgFooter"></a>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                <a routerLink="/" class="svgFooter mb-5 mt-2 ms-4"></a>
+                <ul class="d-flex">
+                    <li>
+                        <a href="https://www.facebook.com/niumobility" target="_blank" class="linksSocial"><i class="fab fa-facebook pe-3"></i></a>
+                    </li> 
+                    <li>
+                        <a href="https://www.instagram.com/niumobility" target="_blank" class="linksSocial"><i class="fab fa-instagram pe-3"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.youtube.com/niumobility" target="_blank" class="linksSocial"><i class="fab fa-youtube pe-3"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/company/niu-technologies" target="_blank" class="linksSocial"><i class="fab fa-linkedin-in pe-3"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/niumobility" target="_blank" class="linksSocial"><i class="fab fa-twitter pe-3"></i></a>
+                    </li>
                 </ul>
+                <p class="textFooter mt-5">© 2021 NIU International.Todos los derechos reservados.</p>
             </div>
             <div class="col">
+                <dl>
+                    <dt class="text-white mb-3">App</dt>
+                    <li>
+                        <div class="textColorFooter">
+                            <i class="fab fa-apple pe-2"></i>
+                            <span class="fs-6">iOS</span>
+                            <div>
+                                <img src="./assets/img/NIU-App-ios-Home-Footer.jpg" alt="">
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="textColorFooter">
+                            <i class="fab fa-google-play pe-2"></i>
+                            <span class="d-inline-block fs-6" tabindex="0" data-bs-toggle="popover" data-bs-trigger="hover focus" data-bs-content="Disabled popover">
+                                <button class="btn btn-primary" disabled>Android</button>
+                            </span>
+                            <div>
+                                <img src="./assets/img/NIU-App-Android-Footer.jpg" alt="">
+                            </div>
+                        </div>
+                        <span class="d-inline-block fs-6" tabindex="0" data-bs-toggle="popover" data-bs-trigger="hover focus" data-bs-content="Disabled popover">
+                            <button class="btn btn-primary" disabled>Android</button>
+                        </span>
+                    </li>
+                </dl>
+                <span class="d-inline-block" tabindex="0" data-bs-toggle="popover" data-bs-trigger="hover focus" data-bs-content="Disabled popover" data-bs-original-title>
+                    <button class="btn btn-primary" type="button" disabled>Disabled button</button>
+                </span>
+                <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="Top popover">
+                    Popover on top
+                </button>
             </div>
         </div>
     </div>
