--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -26,7 +26,7 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/">About us</a>
+                    <a class="nav-link" routerLink="/about">About us</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/app">App</a>
